# fun_and_recreation

./: .gitignore  LICENSE  README.md  pyproject.toml
htmx_ticker/: .gitignore  README.md  go.mod  main.go
htmx_ticker/views/: index.html  results.html  values.html
rust_htmx_ticker/: Cargo.toml  README.md
rust_htmx_ticker/src/: error.rs  main.rs  templates.rs
rust_htmx_ticker/src/web/: mod.rs  routes_hello.rs  routes_ticker.rs
rust_htmx_ticker/templates/: index.html  results.html  template.html  values.html
rust_htmx_ticker/tests/: quick_dev.rs
